Reworked Settings Layout (removed the most Sub Settings) | Removed Audio Stream Debugging